--- a/.github/workflows/pr-description.yml
+++ b/.github/workflows/pr-description.yml
@@ -8,6 +8,8 @@ jobs:
   check-pr-description:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Check PR Description
       uses: ./pr-description-checker
       with:
